--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.3.0",
+    "@toolpad/core": "^0.14.0",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "bootstrap-icons": "^1.12.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
-    "@toolpad/core": "^0.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
