El chat ya funciona bn, bn

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://KittenTeams:KittenTeams@kittenteams.hxkeevt.mongodb.net/chatpet?retryWrites=true&w=majority&appName=KittenTeams
+VITE_BACKEND_URL=http://10.0.145.19:5000
